--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,16 @@
 spring.application.name=user-service
 server.port=8081
+
+# ??????????? ??????? ???? ????? H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# ???????????? ???? ????? H2 ?? ???? ????? ? ???'???
+spring.datasource.url=jdbc:h2:mem:userdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# ???????????? SQL-??????? ? ???????
+spring.jpa.show-sql=true
