--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,14 @@
 spring.application.name=user-service
 server.port=8081
 
-# ??????????? ??????? ???? ????? H2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# PostgreSQL Database configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/userdb
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-# ???????????? ???? ????? H2 ?? ???? ????? ? ???'???
-spring.datasource.url=jdbc:h2:mem:userdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-# ???????????? SQL-??????? ? ???????
+# JPA/Hibernate properties
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
