--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,18 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# ==== Zipkin Configuration ====
+spring.zipkin.base-url=http://localhost:9411
+spring.zipkin.enabled=true
+# ==== Tracing Configuration ====
+management.tracing.sampling.probability=1.0
+
+# ==== Actuator and Prometheus Metrics ====
+management.endpoints.web.base-path=/management
+management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.exclude=beans
+management.endpoint.health.show-details=always
+management.endpoint.env.show-values=when_authorized
+# Micrometer settings
+management.metrics.export.prometheus.enabled=true
